--- a/views/user.tt
+++ b/views/user.tt
@@ -1,3 +1,5 @@
+<div id="content">
 [% FOREACH id IN data.keys.nsort %]
   [% data.$id.id %]:[% data.$id.name %]:[% data.$id.email %]
 [% END %]
+</div>
