--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,8 @@ margin: 0;
 margin-bottom: 25px;
 padding: 0;
 background-color: #ddd;
-background-image: url("/images/perldancer-bg.jpg");
-background-repeat: no-repeat;
+background-image: url("/images/perldancer-bg.png");
+//background-repeat: no-repeat;
 background-position: top left;
 
 font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana";
@@ -54,7 +54,7 @@ padding-right: 30px;
 
 
 #header {
-background-image: url("/images/perldancer.jpg");
+background-image: url("/images/perldancer.png");
 background-repeat: no-repeat;
 background-position: top left;
 height: 64px;
