--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -1,10 +1,11 @@
 <html>
   <head><title>DemoApp</title>
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
 
 <body>
   <h1>DemoApp</h1>
   [% content %]
+<hr>
 </body>
 </html>
